--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>William Portfolio</title>
+
+    <meta property="og:title" content="Jeremiah William Sebastian" />
+    <meta property="og:description" content="My Personal Portfolio" />
+    <meta property="og:image" content="https://www.jwseb.com/logo.png" />
+    <meta property="og:url" content="https://www.jwseb.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="Jeremiah William Sebastian" />
+    <meta name="twitter:title" content="Jeremiah William Sebastian" />
+    <meta name="twitter:description" content="My Personal Portfolio" />
+    <meta name="twitter:image" content="https://www.jwseb.com/logo.png" />
   </head>
   <body>
     <div id="root"></div>
